# syschat

./: Cargo.toml  README.md  build.rs
client/: package-lock.json  package.json  svelte.config.js
client/src/routes/: +page.svelte  LiveMessages.svelte  NewMessage.svelte
src/: main.rs  tests.rs
