[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
axum-extra = { version = "0.9", features = ["erased-json"] }
tower = "0.4"
http-body-util = "0.1"
mime = "0.3"
tower-http = { version = "0.5", features = ["fs", "trace"] }
